# bernuca-pygame

./: README.md  app.py  pyproject.toml
game/: __main__.py  app.py  settings.py  sprite.py
